<package format="2">
  <name>imu_data_logger</name>
  <version>0.0.0</version>
  <description>The imu_data_logger package</description>

  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_python</build_depend>
  <exec_depend>ament_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
